--- a/ej14/index.css
+++ b/ej14/index.css
@@ -37,6 +37,20 @@
     margin: 0 30%;
 }
 
+aside h3 {
+    background-color: blue;
+    color: white; 
+    padding: 10px;
+  }
+  
+  aside {
+    width: 300px;
+    background-color: moccasin;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  
 .header ul {
     display: flex;
     justify-content: center;
