Añadidos ciertos cambios necesarios para el log, falta averiguar mal funcionamiento de CSS

--- a/TW_Proyecto/vista/estiloProyecto.css
+++ b/TW_Proyecto/vista/estiloProyecto.css
@@ -353,8 +353,8 @@ form.registros_pag input[type='submit'] {
 }
 
 .log {
-  width: 20%;
-  background-color: lightcoral;
+  width: 50%;
+  background-color: red;
 }
 
 .log h3 {
