Arreglado parte de copia seguridad y terminada la restauracion

--- a/TW_Proyecto/vista/estiloProyecto.css
+++ b/TW_Proyecto/vista/estiloProyecto.css
@@ -21,6 +21,12 @@
   /*simbolo telefono*/
 }
 
+@media (max-width: 1500px) {
+  .telefono .numero {
+    display: none;
+  }
+}
+
 .separador {
   margin-right: 15px;
 }
