Formateando, cambios minimos y sigue fallando la restauracion de la bbd

--- a/TW_Proyecto/vista/estiloProyecto.css
+++ b/TW_Proyecto/vista/estiloProyecto.css
@@ -388,7 +388,7 @@ form.registros_pag input[type='submit'] {
 }
 
 .fecha-log {
-  color: lightskyblue;
+  color: rgb(0, 115, 255);
 }
 
 .descrip-log {
