--- a/TW_Proyecto/vista/estiloProyecto.css
+++ b/TW_Proyecto/vista/estiloProyecto.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 20px 0;
   color: black;
+  border-radius: 10px;
 }
 
 .top-header .telefono {
@@ -32,16 +33,18 @@
 }
 
 #enviar {
-  background-color: white;
+  background-color: rgb(138, 228, 255);
   color: black;
   padding: 20px;
   font-size: 25px;
   border: 2px solid rgb(138, 228, 255);
-  border-radius: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 #enviar:hover {
-  background-color: rgb(0, 195, 255);
+  background-color: white;
   color: black;
   cursor: pointer;
 }
@@ -50,7 +53,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 5px;
   border-bottom: 2px solid rgb(138, 228, 255);
 }
 
@@ -61,7 +64,12 @@
 }
 
 .navi li {
-  margin-right: 20%;
+  margin-right: 15%;
+  border: 1px solid rgb(138, 228, 255);
+  border-radius: 5px;
+  padding: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 main {
@@ -100,11 +108,12 @@ main {
   padding: 10px;
   border-radius: 5px;
   font-size: 1.1em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .bienvenida ul li:hover {
   background-color: rgb(0, 195, 255);
-  cursor: pointer;
 }
 
 aside h3 {
@@ -120,6 +129,7 @@ aside {
   padding: 10px;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
 }
 
 h3 {
@@ -136,6 +146,7 @@ footer {
   background-color: rgb(138, 228, 255);
   color: black;
   padding: 10px;
+  border-radius: 10px;
 }
 
 .contenedor {
@@ -155,20 +166,38 @@ li:hover {
   color: black;
 }
 
+.telefono input[type='submit'] {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  font-size: 25px;
+  border: 2px solid rgb(138, 228, 255);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.telefono input[type='submit']:hover {
+  background-color: rgb(67, 208, 251);
+  color: black;
+  cursor: pointer;
+}
+
 input[type='submit'] {
   background-color: rgb(138, 228, 255);
   color: black;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
   margin: 2px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 input[type='submit']:hover {
   background-color: white;
-  color: rgb(138, 228, 255);
-  border: 2px solid rgb(0, 195, 255);
+  color: black;
+  border: 1px solid rgb(0, 195, 255);
 }
 
 .listado {
@@ -176,7 +205,7 @@ input[type='submit']:hover {
   padding: 20px;
   margin-top: -10px;
   border: 2px solid rgb(138, 228, 255);
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .formulario-editar label {
@@ -188,6 +217,11 @@ input[type='submit']:hover {
   color: black;
   border: 2px solid rgb(138, 228, 255);
   border-radius: 5px;
+}
+
+.formulario-editar label:hover {
+  background-color: rgb(138, 228, 255);
+  color: black;
 }
 
 .formulario-editar .clave input {
@@ -218,7 +252,7 @@ a {
   background-color: white;
   padding: 10px;
   border: 2px solid rgb(138, 228, 255);
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .accion-a-realizar p {
@@ -228,6 +262,8 @@ a {
 .accion-a-realizar ul li {
   list-style-type: none;
   font-size: large;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .datos-cada-usuario,
@@ -235,24 +271,27 @@ a {
   background-color: white;
   padding: 10px;
   flex: 1;
-  border: 2px solid rgb(138, 228, 255);
-  border-radius: 5px;
+  border: 1px solid rgb(138, 228, 255);
+  border-radius: 10px;
 }
 
 .datos-cada-usuario li:hover {
-  background-color: rgb(0, 195, 255);
+  background-color: rgb(138, 228, 255);
   color: black;
 }
 
 .datos-cada-usuario li {
   list-style-type: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .datos-total {
   background-color: white;
-  border: 3px solid rgb(138, 228, 255);
+  border: 2px solid rgb(138, 228, 255);
   display: flex;
   align-items: center;
+  border-radius: 10px;
 }
 
 .paginacion,
@@ -262,6 +301,8 @@ form.registros_pag input[type='submit'] {
   margin: 5px auto;
   font-size: large;
   text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .form-group {
@@ -277,16 +318,22 @@ form.registros_pag input[type='submit'] {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .botones-editar-logout {
   display: flex;
   justify-content: center;
   margin: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .boton-editar {
   margin-right: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .rol {
@@ -300,6 +347,8 @@ form.registros_pag input[type='submit'] {
   flex-direction: column;
   text-align: left;
   padding-bottom: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .autores a:hover {
@@ -334,6 +383,7 @@ form.registros_pag input[type='submit'] {
 .foto img {
   display: block;
   margin: 0 auto;
+  width: 100%;
 }
 
 .reservas {
@@ -367,6 +417,7 @@ form.registros_pag input[type='submit'] {
   width: 50%;
   background-color: rgb(138, 228, 255);
   color: black;
+  border-radius: 10px;
 }
 
 .log h3 {
@@ -401,4 +452,19 @@ form.registros_pag input[type='submit'] {
   text-align: center;
   margin: 20px;
   height: 20px;
+  background-color: rgb(138, 228, 255);
+  /* Color principal del botón */
+  color: black;
+  /* Color de texto blanco */
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  /* Animación de cambio de color al pasar el cursor */
+}
+
+.adminbbdd:hover {
+  background-color: rgb(108, 198, 235);
+  /* Color más oscuro al pasar el cursor */
 }
